--- a/trunk/debian/changelog
+++ b/trunk/debian/changelog
@@ -1,3 +1,11 @@
+katana (0.2.0-0) unstable; urgency=low
+
+  * Updated to Qt 4.6.2 final.
+  * Improved finger scrolling.
+  * Improved verse selection.
+
+ -- Josh Nisly <katana@joshnisly.com>  Tue,  23 Mar 2010 10:59:05 -0600
+
 katana (0.1.0-0) unstable; urgency=low
 
   * Initial Debianization.
