--- a/trunk/debian/changelog
+++ b/trunk/debian/changelog
@@ -1,3 +1,16 @@
+katana (0.3.1-0) unstable; urgency=low
+
+  * Misc changes for PR 1.2
+
+ -- Josh Nisly <katana@joshnisly.com>  Fri,  4 Jun 2010 10:20:39 -0500
+
+katana (0.3.0-0) unstable; urgency=low
+
+  * Add ability to install/remove translations
+  * Fix several viewing bugs
+
+ -- Josh Nisly <katana@joshnisly.com>  Tue, 13 Apr 2010 09:03:35 -0500
+
 katana (0.2.2-0) unstable; urgency=low
 
   * Fix bugs introduced in 0.2.1
@@ -29,4 +42,3 @@ katana (0.1.0-0) unstable; urgency=low
   * Initial Debianization.
 
  -- Josh Nisly <katana@joshnisly.com>  Mon,  14 Dec 2009 20:59:05 -0600
-
