--- a/trunk/debian/changelog
+++ b/trunk/debian/changelog
@@ -1,3 +1,18 @@
+katana (0.3.6-0) unstable; urgency=low
+
+  * Make search cancellable
+  * Fix app icon
+
+ -- Josh Nisly <katana@joshnisly.com>  Tue, 22 Jun 2010 06:55:03 -0500
+
+katana (0.3.5-0) unstable; urgency=low
+
+  * Correctly handle latin-1 encoded translations
+  * Handle scripRef elements (used in ISV, for example) better
+  * Better feedback when installing modules
+
+ -- Josh Nisly <katana@joshnisly.com>  Wed, 16 Jun 2010 09:26:08 -0500
+
 katana (0.3.4-0) unstable; urgency=low
 
   * Fix window title in portrait mode
